--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "test-frontend-assemble-pizza",
   "version": "0.1.0",
+  "description": "Aplicação web para criação e personalização de pizzas usando React, TypeScript e Tailwind CSS.",
   "private": true,
   "scripts": {
     "dev": "next dev",
